# the-waffle-server

./: .gitignore  .python-version  README.md  constants.py  cook.json  ee  main.py  models.py  prompts.py  pyproject.toml  rag.py  table.py  test.py  test_scratch.py
extractdata/: dataextract.py  prompts.py  utils.py
template/: index.html
