[project]
name = "the-waffle-server"
version = "0.1.0"
description = "the waffle backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "langchain-core>=0.3.47",
    "langchain-openai>=0.3.9",
    "pydantic>=2.10.6",
    "rich>=13.9.4",
    "anthropic>=0.49.0",
    "pillow>=11.1.0",
    "pymupdf>=1.25.4",
    "transformers>=4.50.0",
    "numpy>=2.2.4",
    "openai>=1.68.2",
    "torch>=2.6.0",
    "supabase>=2.14.0",
    "timm>=1.0.15",
    "pinecone>=6.0.2",
    "psycopg2-binary>=2.9.10",
    "pandas>=2.2.3",
    "langchain-anthropic>=0.3.10",
]
